--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 /app/cache/*
 /app/logs/*
 /vendor/
+
+
+
+#ignore client asset files#
+###########################
+/src/Cms/CoreBundle/ClientAssets/css/*
+src/Cms/CoreBundle/ClientAssets/js/*
