added persisterBundle, added persister test, added document entity

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+cms_persister:
+    resource: "@CmsPersisterBundle/Resources/config/routing.yml"
+    prefix:   /
+
 cms_core:
     resource: "@CmsCoreBundle/Resources/config/routing.yml"
     prefix:   /
