added validator bundle and csrfToken class and unit tests

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+cms_validator:
+    resource: "@CmsValidatorBundle/Resources/config/routing.yml"
+    prefix:   /
+
 cms_persister:
     resource: "@CmsPersisterBundle/Resources/config/routing.yml"
     prefix:   /
