--- a/src/Cms/PersisterBundle/Resources/config/services.yml
+++ b/src/Cms/PersisterBundle/Resources/config/services.yml
@@ -1,7 +1,7 @@
 parameters:
-#    cms_persister.example.class: Cms\PersisterBundle\Example
+    persister.class: Cms\PersisterBundle\Services\Persister
 
 services:
-#    cms_persister.example:
-#        class: %cms_persister.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    persister:
+        class: %persister.class%
+        arguments: [@doctrine.odm.mongodb.document_manager, @validator]
