added force_login service

--- a/src/Cms/CoreBundle/Resources/config/validation.yml
+++ b/src/Cms/CoreBundle/Resources/config/validation.yml
@@ -22,3 +22,7 @@ Cms\CoreBundle\Document\Template:
            - Length:
               min: 3
               max: 127
+        content:
+          - Type:
+             type: string
+             message: The value {{ value }} is not a valid {{ type }}.
