--- a/src/Cms/CoreBundle/Resources/config/validation.yml
+++ b/src/Cms/CoreBundle/Resources/config/validation.yml
@@ -1,3 +1,111 @@
+Cms\CoreBundle\Document\Site:
+    properties:
+        state:
+          - NotBlank: { message: 'Please add a state' }
+          - Choice:
+              choices: [active, deleted]
+        namespace:
+          - NotBlank: { message: 'Please add a unique namespace' }
+          - Length:
+              min: 2
+              max: 63
+        domain:
+          - NotBlank: { message: 'Please add the domain of the site' }
+          - Length:
+              max: 127
+
+Cms\CoreBundle\Document\ContentType:
+    properties:
+        state:
+          - NotBlank: { message: 'Please add a state' }
+          - Choice:
+              choices: [active, deleted, dev]
+        name:
+          - NotBlank: { message: 'Please add a name' }
+          - Length:
+              min: 3
+              max: 127
+        formats:
+          - NotBlank: { message: 'Please add at least one format' }
+          - Type:
+              type: array
+              message: The value {{ value }} is not a valid {{ type }}.
+        slugPrefix:
+          - Length:
+              max: 127
+        categories:
+          - Type:
+              type: array
+              message: The value {{ value }} is not a valid {{ type }}.
+
+Cms\CoreBundle\Document\Node:
+      properties:
+          state:
+            - NotBlank: { message: 'Please add a state' }
+            - Choice:
+                choices: [active, deleted]
+          siteId:
+            - NotBlank: { message: 'Please add a siteId' }
+            - Type:
+                type: string
+                message: The value {{ value }} is not a valid {{ type }}.
+          host:
+            - NotBlank: { message: 'Please add a hostname' }
+            - Length:
+                min: 5
+                max: 127
+          contentTypeName:
+            - Length:
+                min: 4
+                max: 127
+          format:
+            - NotBlank: { message: 'Please add at least one format' }
+            - Length:
+                min: 4
+                max: 63
+          categories:
+            - Type:
+                type: array
+                message: The value {{ value }} is not a valid {{ type }}.
+          tags:
+            - Type:
+                type: array
+                message: The value {{ value }} is not a valid {{ type }}.
+          defaultLimit:
+            - Type:
+                type: integer
+                message: The value {{ value }} is not a valid {{ type }}.
+          slug:
+            - NotBlank: { message: 'Please add a slug' }
+            - Length:
+                min: 4
+                max: 511
+          title:
+            - Length:
+                min: 1
+                max: 127
+          templateName:
+            - NotBlank: { message: 'Please add a template name' }
+            - Length:
+                min: 4
+                max: 127
+          conversationIds:
+            - Type:
+                type: array
+                message: The value {{ value }} is not a valid {{ type }}.
+          fields:
+            - Type:
+                type: array
+                message: The value {{ value }} is not a valid {{ type }}.
+          author:
+            - Type:
+                type: array
+                message: The value {{ value }} is not a valid {{ type }}.
+          view:
+            - Type:
+                type: array
+                message: The value {{ value }} is not a valid {{ type }}.
+
 Cms\CoreBundle\Document\Asset:
     properties:
         name:
