--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -32,5 +32,5 @@ security:
             logout: ~
 
     access_control:
-        - { path: ^/admin/update, roles: [ROLE_ADMIN] }
         - { path: ^/admin, roles: [ ROLE_ADMIN ] }
+        - { path: /app, roles: [ROLE_USER] }
