--- a/src/Cms/CoreBundle/Resources/config/routing.yml
+++ b/src/Cms/CoreBundle/Resources/config/routing.yml
@@ -69,15 +69,15 @@ cms_core.node_delete:
 
 
 #template
-cms_core.template_delete:
-  pattern: /template/delete
-  defaults: { _controller: CmsCoreBundle:Template:delete }
-  methods: [POST]
-
 cms_core.template_new:
   pattern: /template/new
   defaults: { _controller: CmsCoreBundle:Template:new }
   methods: [GET]
+
+cms_core.template_delete:
+  pattern: /template/delete
+  defaults: { _controller: CmsCoreBundle:Template:delete }
+  methods: [POST]
 
 cms_core.template_readAll:
   pattern: /templates
@@ -92,6 +92,33 @@ cms_core.template_read:
 cms_core.template_save:
   pattern: /template
   defaults: { _controller: CmsCoreBundle:Template:save }
+  methods: [POST]
+
+
+#theme
+cms_core.theme_delete:
+  pattern: /theme/delete
+  defaults: { _controller: CmsCoreBundle:Theme:delete }
+  methods: [POST]
+
+cms_core.theme_new:
+  pattern: /theme/new
+  defaults: { _controller: CmsCoreBundle:Theme:new }
+  methods: [GET]
+
+cms_core.theme_readAll:
+  pattern: /themes
+  defaults: { _controller: CmsCoreBundle:Theme:readAll }
+  methods: [GET]
+
+cms_core.theme_read:
+  pattern: /theme/{id}
+  defaults: { _controller: CmsCoreBundle:Theme:read }
+  methods: [GET]
+
+cms_core.theme_save:
+  pattern: /theme
+  defaults: { _controller: CmsCoreBundle:Theme:save }
   methods: [POST]
 
 
