--- a/src/Cms/CoreBundle/Resources/config/services.yml
+++ b/src/Cms/CoreBundle/Resources/config/services.yml
@@ -7,6 +7,10 @@ parameters:
     cms.param_manager.class: Cms\CoreBundle\Services\ParamManager\Core
     cms.node_loader.class: Cms\CoreBundle\Services\NodeLoader\CoreNode
     cms.namespace_helper.class: Cms\CoreBundle\Services\NamespaceHelper
+    cms.media_manager.class: Cms\CoreBundle\Services\MediaManager\Manager
+    aws.key.param: AKIAJN6IC7B5YOWD627Q
+    aws.secret.param: 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
+    aws.s3_storage_factory.class: Cms\CoreBundle\Services\MediaManager\S3StorageFactory
 
 services:
     asset_manager:
@@ -30,3 +34,11 @@ services:
         class: %cms.node_loader.class%
     namespace_helper:
         class:  %cms.namespace_helper.class%
+    media_storage_factory:
+        class: %aws.s3_storage_factory.class%
+        arguments: ["%aws.key.param%", "%aws.secret.param%"]
+    media_manager:
+        class: %cms.media_manager.class%
+        arguments: [@media_storage_factory]
+        calls:
+          - [setBucket, [shinra_test]]
