--- a/src/Cms/CoreBundle/Resources/config/routing.yml
+++ b/src/Cms/CoreBundle/Resources/config/routing.yml
@@ -9,6 +9,11 @@ cms_core.user_save:
   defaults: { _controller: CmsCoreBundle:User:Save }
   methods: [POST]
 
+#landing
+_welcome:
+  pattern: /
+  defaults: { _controller: CmsCoreBundle:Welcome:index }
+  methods: [GET]
 
 #app
 cms_core.app_index:
