--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -14,7 +14,7 @@ framework:
     validation:      { enable_annotations: true }
     templating:
         engines: ['twig']
-        #assets_version: SomeVersionScheme
+        assets_version: v1
     default_locale:  "%locale%"
     trusted_proxies: ~
     session:         ~
@@ -29,7 +29,7 @@ twig:
 assetic:
     debug:          %kernel.debug%
     use_controller: false
-    bundles:        [ ]
+    bundles:        [CmsCoreBundle ]
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
