--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -29,14 +29,16 @@ twig:
 assetic:
     debug:          %kernel.debug%
     use_controller: false
-    bundles:        [CmsCoreBundle ]
+    bundles:        [CmsCoreBundle, CmsUserBundle ]
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
         #closure:
         #    jar: %kernel.root_dir%/Resources/java/compiler.jar
-        #yui_css:
-        #    jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
+        yui_css:
+            jar: /usr/share/yui-compressor/yui-compressor.jar
+        yui_js:
+            jar: /usr/share/yui-compressor/yui-compressor.jar
 
 # Doctrine Configuration
 doctrine:
