--- a/src/Cms/CoreBundle/Resources/config/validation.yml
+++ b/src/Cms/CoreBundle/Resources/config/validation.yml
@@ -50,10 +50,10 @@ Cms\CoreBundle\Document\ContentType:
 
 Cms\CoreBundle\Document\Node:
       properties:
-          state:
-            - NotBlank: { message: 'Please add a state' }
-            - Choice:
-                choices: [active, deleted]
+#          state:
+#            - NotBlank: { message: 'Please add a state' }
+#            - Choice:
+#                choices: [active, deleted]
           siteId:
             - NotBlank: { message: 'Please add a siteId' }
             - Type:
@@ -87,15 +87,16 @@ Cms\CoreBundle\Document\Node:
             - Type:
                 type: integer
                 message: The value {{ value }} is not a valid {{ type }}.
+          title:
+            - NotBlank: { message: 'Please add a title name' }
+            - Length:
+                min: 1
+                max: 127
           slug:
             - NotBlank: { message: 'Please add a slug' }
             - Length:
                 min: 4
                 max: 511
-          title:
-            - Length:
-                min: 1
-                max: 127
           templateName:
             - NotBlank: { message: 'Please add a template name' }
             - Length:
