--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -25,6 +25,7 @@ twig:
     debug:            %kernel.debug%
     strict_variables: %kernel.debug%
 
+
 # Assetic Configuration
 assetic:
     debug:          %kernel.debug%
@@ -77,3 +78,11 @@ swiftmailer:
     username:  %mailer_user%
     password:  %mailer_password%
     spool:     { type: memory }
+
+
+# Services
+services:
+ twig.extension.text:
+     class: Twig_Extensions_Extension_Text
+     tags:
+         - { name: twig.extension }
