--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "jms/di-extra-bundle": "1.3.*",
 	    "doctrine/mongodb-odm": "1.0.*@dev",
         "doctrine/mongodb-odm-bundle": "3.0.*@dev",
-        "aws/aws-sdk-php": "2.*"
+        "aws/aws-sdk-php": "2.*",
+        "jms/serializer-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
