--- a/src/Cms/CoreBundle/Resources/config/services.yml
+++ b/src/Cms/CoreBundle/Resources/config/services.yml
@@ -12,6 +12,7 @@ parameters:
     aws.secret.param: Mc3n0/w7oKZ23S3iTFcnViXyT+JD7zZ9lhdmYF0S
     aws.s3_storage_factory.class: Cms\CoreBundle\Services\MediaManager\S3StorageFactory
     cms.slug_helper.class: Cms\CoreBundle\Services\SlugHelper
+    cms.twig_client.class: Cms\CoreBundle\Services\TemplateLoader\TwigClient
 
 services:
     asset_manager:
@@ -19,6 +20,8 @@ services:
     template_loader:
         class: %cms.mongo_twig_load.class%
         arguments: [@doctrine.odm.mongodb.document_manager, CmsCoreBundle:Template ]
+    twig_client:
+        class: %cms.twig_client.class%
     twig_loader:
         class: %cms.twig_environemnt.class%
         arguments: [@kernel]
