--- a/src/Cms/UserBundle/Resources/config/validation.yml
+++ b/src/Cms/UserBundle/Resources/config/validation.yml
@@ -1,4 +1,6 @@
 Cms\UserBundle\Document\User:
+    constraints:
+      - Doctrine\Bundle\MongoDBBundle\Validator\Constraints\Unique: email
     properties:
         email:
            - NotBlank: { message: Please add an Email address. }
