--- a/src/Cms/CoreBundle/Resources/config/routing.yml
+++ b/src/Cms/CoreBundle/Resources/config/routing.yml
@@ -205,6 +205,16 @@ cms_core.theme_wizard_save_components:
   defaults: { _controller: CmsCoreBundle:ThemeWizard:saveComponents }
   methods: [POST]
 
+cms_core.theme_wizard_layouts:
+  pattern: /theme/wizard/layouts/{orgId}/{themeId}
+  defaults: { _controller: CmsCoreBundle:ThemeWizard:layouts }
+  methods: [GET]
+
+cms_core.theme_wizard_add_remove_layout:
+  pattern: /theme/wizard/layout/{actionType}
+  defaults: { _controller: CmsCoreBundle:ThemeWizard:addRemoveLayout }
+  methods: [POST]
+
 #assets
 cms_core.asset_delete:
   pattern: /asset/delete
